--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,14 +49,17 @@
 			<div class="navbar-header">
 				<!-- Button for smallest screens -->
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"><span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-				<a class="navbar-brand logo_img" href="index1.html"><img src="static/images/logo1.png"></a>
+				<a class="navbar-brand logo_img" href=""><img src="static/images/logo1.png"></a>
 			</div>
 			<div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="">Головна</a></li>
 					<li class="active"><a href="">Форум</a></li>
-					<li class="active"><a href="">Барахолка</a></li>
-					<li class="active"><a href="">Водойми</a></li>
+					<li class="active"><a href="">Продам / Куплю</a></li>
+                    <li class="active"><a href="">Водойми</a></li>
+                    {%if user.username%}
+                        <li class="active"><a href="/logout">вийти</a></li>
+                    {% endif%}
 				</ul>
 			</div>
         </div>
